--- a/main.css
+++ b/main.css
@@ -17,7 +17,8 @@ html, body {
 h1 {
   font-size: 2em;
   text-align: center;
-  margin-top: 20px; }
+  margin-top: 20px;
+  font-weight: normal;}
 
 .location-inputs {
   width: 100%;
