--- a/main.css
+++ b/main.css
@@ -1,11 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300");
-#map {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
-  height: 400px;
+#map {
+  height: 100%;
   width: 100%;
-  max-width: 940px;
-  margin: 20px auto; 
-  }
+  max-width: 940px; }
 
 html, body {
   font-family: 'Roboto', sans-serif;
@@ -18,17 +20,45 @@ html, body {
 
 h1 {
   font-size: 2em;
+  font-weight: 300;
   text-align: center;
   margin-top: 20px;
-  font-weight: normal;}
+  position: absolute;
+  top: 20px;
+  left: 36px; }
+
+.content {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch; }
+
+.sixty-container, .forty-container {
+  height: auto; }
+
+.sixty-container {
+  width: 45%; }
+
+.forty-container {
+  width: 55%; }
+
+.results {
+  width: 0;
+  overflow-x: hidden; }
 
 .location-inputs {
-  width: 100%;
-  max-width: 940px;
-  text-align: center;
-  margin: 20px auto;
   display: flex;
-  justify-content: space-around; }
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-left: 36px;
+  overflow-x: hidden; }
+
+form-group {
+  width: 100%;
+  margin-bottom: 48px; }
 
 label {
   font-size: 18px;
@@ -37,67 +67,48 @@ label {
   display: none; }
 
 input[type="text"] {
+  position: relative;
   width: 100%;
   font-size: 1.5em;
+  line-height: 1.75em;
+  font-weight: 200;
   padding: 10px 0px;
   border: none;
-  border-bottom: solid 2px #413D37;
-  transition: border 0.3s;
   background: none;
-  }
+  overflow: visible; }
+  input[type="text"]:after {
+    content: "";
+    position: absolute;
+    top: 20px;
+    left: 0;
+    height: 2px;
+    width: 0;
+    z-index: 1;
+    background-color: #413D37; }
 
 input[type="text"]:focus,
 input[type="text"].focus {
-  border-bottom: solid 2px #6490FF;
   outline: none; }
+  input[type="text"]:focus:after,
+  input[type="text"].focus:after {
+    width: 100%; }
 
 ::-webkit-input-placeholder {
   color: #f6c597;
   font-size: 1.5em;
+  line-height: 1.75em;
   font-weight: 200;
   font-style: italic; }
-
-form-group {
-  width: 40%; 
-  margin: 10px;}
 
 b {
   font-weight: 700; }
 
-button {
-    display: inline-block;
-    height: 40px;
-    padding: 0;
-    margin: 0;
-    vertical-align: top;
-    width: 154px;
-}
-
-/*
-#car-animation img {
-    display: block;
-    height: auto;  
-    width: 150px;
-}
-
-#animate-car {
-    background-image: url( 'car2.jpg' );
-    background-size: 150px auto;
-    height: 40px;  
-    width: 154px;
-}
-*/
-#myContainer {
-  width: 200px;
-  height: 30px;
-  position: relative;
-}
-
 #myAnimation {
-  width: 130px;
-  height: 30px;
   position: absolute;
-}
-
+  bottom: 36px;
+  left: 36px; }
+  #myAnimation img {
+    width: 20%;
+    height: auto; }
 
 /*# sourceMappingURL=main.css.map */
