--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300');
 
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 $light-bg: #FCECDD;
 $black: #413D37;
 
@@ -11,12 +17,10 @@ $blue: #6490FF;
 
 
 #map {
-	height: 400px;
+	height: 100%;
 	width:100%;
 	max-width: 940px;
-	margin: 20px auto;
 }
-
 
 html, body {
 	font-family: 'Roboto', sans-serif;
@@ -31,19 +35,55 @@ html, body {
 
 h1 {
 	font-size: 2em;
+	font-weight: 300;
 	text-align: center;
 	margin-top: 20px;
+	position: absolute;
+	top: 20px;
+	left: 36px;
+}
+
+.content {
+	width: 100%;
+	height: 100%;
+
+	text-align: center;
+
+	display: flex;
+	justify-content: space-between;
+	align-items: stretch;
+}
+
+.sixty-container, .forty-container {
+	height: auto;
+}
+
+.sixty-container {
+	width: 45%;
+}
+
+.forty-container {
+	width: 55%;
+}
+
+.results {
+	width: 0;
+	overflow-x: hidden;
 }
 
 .location-inputs {
-	width: 100%;
-	max-width: 940px;
-
-	text-align: center;
-	margin: 20px auto;
-
 	display: flex;
-	justify-content: space-around;
+	flex-direction: column;
+
+	align-items: center;
+	justify-content: center;
+	padding-left: 36px;
+	overflow-x: hidden;
+}
+
+form-group {
+	width: 100%;
+	margin-bottom: 48px;
 }
 
 label {
@@ -54,33 +94,55 @@ label {
 }
 
 input[type="text"] {
+	position: relative;
 	width: 100%;
 	font-size: 1.5em;
+	line-height: 1.75em;
+	font-weight: 200;
 	padding: 10px 0px;
 
 	border: none;
-	border-bottom: solid 2px $black;
-	transition: border 0.3s;
 	background: none;
+	overflow: visible;
+
+	&:after {
+		content: "";
+		position: absolute;
+		top:20px;
+		left: 0;
+		height: 2px;
+		width: 0;
+		z-index: 1;
+		background-color: $black;
+	}
 }
 
 input[type="text"]:focus,
 input[type="text"].focus {
-	border-bottom: solid 2px $blue;
 	outline: none;
+	&:after {
+		width: 100%;
+	}
 }
 
 ::-webkit-input-placeholder {
 	color: darken($light-bg, 15%);
 	font-size: 1.5em;
+	line-height: 1.75em;
 	font-weight: 200;
 	font-style: italic;
 }
 
-form-group {
-	width: 40%;
-}
-
 b {
 	font-weight: 700;
+}
+
+#myAnimation {
+	position: absolute;
+	bottom: 36px;
+	left: 36px;
+	img {
+		width: 20%;
+		height: auto;
+	}
 }
