--- a/main.scss
+++ b/main.scss
@@ -20,6 +20,8 @@ $blue: #6490FF;
 	height: 100%;
 	width:100%;
 	max-width: 940px;
+	opacity: 0;
+	background-color: $black;
 }
 
 html, body {
@@ -28,7 +30,7 @@ html, body {
 	font-size: 16px;
 	line-height: 20px;
 
-	background-color: $light-bg;
+	background-color: $black;
 	color: $black;
 	height: 100%;
 }
@@ -41,6 +43,9 @@ h1 {
 	position: absolute;
 	top: 20px;
 	left: 36px;
+	z-index: 100;
+	color: $light-bg;
+	transition: color 0.7s;
 }
 
 .content {
@@ -54,31 +59,29 @@ h1 {
 	align-items: stretch;
 }
 
-.sixty-container, .forty-container {
-	height: auto;
-}
-
-.sixty-container {
+.map-container {
 	width: 45%;
-}
-
-.forty-container {
-	width: 55%;
 }
 
 .results {
 	width: 0;
 	overflow-x: hidden;
+	background-color: $light-bg;
+	color: $black;
 }
 
 .location-inputs {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 
 	align-items: center;
 	justify-content: center;
-	padding-left: 36px;
-	overflow-x: hidden;
+	padding: 0 36px;
+	height: auto;
+	width: 55%;
+	background-color: $black;
+	color: $light-bg;
 }
 
 form-group {
@@ -93,10 +96,10 @@ label {
 	display: none; 
 }
 
-input[type="text"] {
+input {
 	position: relative;
 	width: 100%;
-	font-size: 1.5em;
+	font-size: 36px;
 	line-height: 1.75em;
 	font-weight: 200;
 	padding: 10px 0px;
@@ -105,29 +108,18 @@ input[type="text"] {
 	background: none;
 	overflow: visible;
 
-	&:after {
-		content: "";
-		position: absolute;
-		top:20px;
-		left: 0;
-		height: 2px;
-		width: 0;
-		z-index: 1;
-		background-color: $black;
-	}
+	color: $light-bg;
 }
+
 
 input[type="text"]:focus,
 input[type="text"].focus {
 	outline: none;
-	&:after {
-		width: 100%;
-	}
 }
 
 ::-webkit-input-placeholder {
-	color: darken($light-bg, 15%);
-	font-size: 1.5em;
+	color: $light-bg;
+	font-size: 1.5;
 	line-height: 1.75em;
 	font-weight: 200;
 	font-style: italic;
@@ -141,8 +133,40 @@ b {
 	position: absolute;
 	bottom: 36px;
 	left: 36px;
+	cursor: pointer;
 	img {
 		width: 20%;
 		height: auto;
+	}
+}
+
+#back {
+	position: absolute;
+	width: 64px;
+	height: 64px;
+	bottom: 36px;
+	left: -72px;
+	border-radius: 100%;
+	background-color: $light-bg;
+
+	cursor: pointer;
+
+	opacity: 0.7;
+	transition: opacity 0.3s;
+	
+	&:hover {
+		opacity: 1;
+
+		svg {
+			transform: translate(-50%, -50%) scale(-1.25, 1.25);
+		}
+	}
+
+	svg {
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%) scale(-1, 1);
+		transition: transform 0.3s;
 	}
 }
