--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ h1 {
   top: 20px;
   left: 36px; }
 
+
 .content {
   width: 100%;
   height: 100%;
@@ -110,5 +111,11 @@ b {
   #myAnimation img {
     width: 20%;
     height: auto; }
+
+.textimage > img,
+.textimage > p {
+    display: inline-block;
+}
+
 
 /*# sourceMappingURL=main.css.map */
