--- a/main.css
+++ b/main.css
@@ -99,12 +99,25 @@ b {
 
 #myAnimation {
   position: absolute;
-  bottom: 36px;
-  left: 36px;
+  bottom: -5px;
+  left: -300px;
   cursor: pointer; }
-  #myAnimation img {
-    width: 20%;
+  #myAnimation svg {
+    width: 288px;
     height: auto; }
+  #myAnimation.prepped {
+    left: 36px; }
+    #myAnimation.prepped:before {
+      content: "Let's Go!";
+      position: absolute;
+      bottom: 120%;
+      left: 0%;
+      background-color: #FCECDD;
+      font-size: 1.5em;
+      font-weight: 400;
+      padding: 16px 36px;
+      border-radius: 5px;
+      clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 80% 90%, 83% 100%, 75% 90%, 0% 90%); }
 
 #back {
   position: absolute;
@@ -123,7 +136,7 @@ b {
       transform: translate(-50%, -50%) scale(-1.25, 1.25); }
   #back svg {
     position: absolute;
-    left: 50%;
+    left: 45%;
     top: 50%;
     transform: translate(-50%, -50%) scale(-1, 1);
     transition: transform 0.3s; }
