--- a/main.scss
+++ b/main.scss
@@ -48,6 +48,14 @@ h1 {
 	transition: color 0.7s;
 }
 
+h2 {
+	font-size: 2em;
+	font-weight: 300;
+	text-align: center;
+	margin: 36px 0 20px;
+	color: $black;
+}
+
 .content {
 	width: 100%;
 	height: 100%;
@@ -68,6 +76,59 @@ h1 {
 	overflow-x: hidden;
 	background-color: $light-bg;
 	color: $black;
+
+	text-align: left;
+
+	.icon {
+		width: auto;
+		height: 144px;
+
+		display: inline-block;
+		margin: 0 36px;
+	}
+
+	p {
+		display: inline-block;
+		font-size: 1.2em;
+		line-height: 1.5em;
+	}
+}
+
+.flex-row {
+	display: flex;
+	align-items: center;
+	margin-bottom: 36px;
+}
+
+input[type="number"] {
+	font-size: 2.5em;
+	font-weight: 300;
+	line-height: 1.5em;
+	font-style: italic;
+	border: none;
+	background: none; 
+	color: $black;
+	padding-left: 15px;
+	margin-right: -10px;
+	outline: none;
+	color: $red;
+}
+
+#red-lights {
+	color: $red;
+}
+
+#speed-traps {
+	color: $red;
+}
+
+.big-number {
+	font-size: 2.5em;
+	font-weight: 300;
+	line-height: 1.5em;
+	font-style: italic;
+	margin-right: 10px;
+	margin-left: 10px;
 }
 
 .location-inputs {
@@ -96,7 +157,11 @@ label {
 	display: none; 
 }
 
-input {
+hr {
+	margin: 18px 72px;
+}
+
+input[type="text"] {
 	position: relative;
 	width: 100%;
 	font-size: 36px;
@@ -134,32 +199,103 @@ b {
 	bottom: -5px;
 	left: -300px;
 	cursor: pointer;
-
+	overflow-x: hidden;
+	width: 100vw;
 	svg {
 		width: 288px;
 		height: auto;
+
+		#car-outline {
+			transition: stroke-color 0.3s ease;
+		}
 	}
+
+	&:hover svg #car-outline {
+		stroke: $light-bg;
+	}
+
+	#BackWheel, #FrontWheel {
+		transform: rotate(-720deg);
+		transition: transform 1.5s ease;
+		transform-origin: 50% 50%;
+	}
+
+	&:before {
+		opacity: 0;
+	}
+
+	transition: left 2s ease;
 
 	&.prepped {
 		left: 36px;
 
 		&:before {
-			content: "Let's Go!";
+			content: "Click me!";
 			position: absolute;
 			bottom: 120%;
 			left: 0%;
+	
 			background-color: $light-bg;
 			font-size: 1.5em;
 			font-weight: 400;
 			padding: 16px 36px;
 			border-radius: 5px;
 			clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 80% 90%, 83% 100%, 75% 90%, 0% 90%);
+
+			animation: popupshow 0.1s linear;
+			animation-delay: 3s;
+			animation-fill-mode: forwards;
 		}
+
+		#BackWheel, #FrontWheel {
+			transform: rotate(0deg);
+			transition: transform 3s ease;
+		}
+
+		@keyframes popupshow {
+			0% {
+				transform: translateY(10%);
+				opacity: 0;
+			}
+
+			100% {
+				transform: translateY(0%);
+				opacity: 1.0;
+			}
+		}
+
 	}
 
 	&.clicked {
+		left: 110%;
 
+		#BackWheel, #FrontWheel {
+			transform: rotate(1440deg);
+			transition: transform 3s ease;
+		}
+
+		&:before {
+			display: none;
+		}
+
+		transition: left 1s ease-in;
+		animation: rearBack 1s linear;
+		transform-origin: 0% 100%;
 	}
+}
+
+@keyframes rearBack {
+	0% {
+		transform: rotate(0deg);
+	}
+	15% {
+		transform: rotate(-15deg);
+	}
+
+	45% {
+		transform: rotate(0deg);
+	}
+
 }
 
 #back {
