--- a/main.css
+++ b/main.css
@@ -20,6 +20,10 @@ html, body {
   color: #413D37;
   height: 100%; }
 
+body {
+  width: 100vw;
+  overflow-x: hidden; }
+
 h1 {
   font-size: 2em;
   font-weight: 300;
@@ -40,9 +44,10 @@ h2 {
   color: #413D37; }
 
 .content {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   text-align: center;
+  overflow-x: hidden;
   display: flex;
   justify-content: space-between;
   align-items: stretch; }
@@ -69,7 +74,35 @@ h2 {
 .flex-row {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin-bottom: 36px; }
+  .flex-row p {
+    transform: translateY(-50%); }
+
+.results .flex-row {
+  display: none; }
+
+.results .fade-three .icon {
+  width: 72px;
+  height: 72px;
+  margin-left: 52px;
+  margin-top: 16px; }
+
+.time-row {
+  margin-left: 36px; }
+  .time-row b {
+    font-size: 1.5em; }
+  .time-row .pop {
+    font-size: 2em;
+    color: #37e179;
+    font-weight: 400;
+    text-shadow: 1px 1px rgba(65, 61, 55, 0.3); }
+
+.fade-two .icon {
+  margin-left: 58px; }
+
+.fade-four {
+  margin: 64px 58px 36px; }
 
 input[type="number"] {
   font-size: 2.5em;
@@ -96,7 +129,8 @@ input[type="number"] {
   line-height: 1.5em;
   font-style: italic;
   margin-right: 10px;
-  margin-left: 10px; }
+  margin-left: 10px;
+  text-shadow: 1px 1px rgba(65, 61, 55, 0.3); }
 
 .location-inputs {
   position: relative;
@@ -149,12 +183,30 @@ input[type="text"].focus {
 b {
   font-weight: 700; }
 
+.start {
+  animation: pop 3s ease;
+  animation-delay: 20s; }
+
+@keyframes pop {
+  0% {
+    transform: scale(1, 1); }
+  10% {
+    transform: scale(1.5, 1.5); }
+  20% {
+    transform: scale(1, 1); }
+  40% {
+    transform: scale(1.2, 1.2); }
+  60% {
+    transform: scale(1, 1); }
+  80% {
+    transform: scale(1.2, 1.2); }
+  100% {
+    transform: scale(1, 1); } }
 #myAnimation {
   position: absolute;
   bottom: -5px;
   left: -300px;
   cursor: pointer;
-  overflow-x: hidden;
   width: 100vw;
   transition: left 2s ease; }
   #myAnimation svg {
@@ -183,19 +235,12 @@ b {
       padding: 16px 36px;
       border-radius: 5px;
       clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 80% 90%, 83% 100%, 75% 90%, 0% 90%);
-      animation: popupshow 0.1s linear;
+      animation: popupshow 0.2s linear;
       animation-delay: 3s;
-      animation-fill-mode: forwards; }
+      animation-fill-mode: both; }
     #myAnimation.prepped #BackWheel, #myAnimation.prepped #FrontWheel {
       transform: rotate(0deg);
-      transition: transform 3s ease; }
-@keyframes popupshow {
-  0% {
-    transform: translateY(10%);
-    opacity: 0; }
-  100% {
-    transform: translateY(0%);
-    opacity: 1.0; } }
+      transition: transform 2s ease; }
   #myAnimation.clicked {
     left: 110%;
     transition: left 1s ease-in;
@@ -207,6 +252,13 @@ b {
     #myAnimation.clicked:before {
       display: none; }
 
+@keyframes popupshow {
+  0% {
+    transform: translateY(10%);
+    opacity: 0; }
+  100% {
+    transform: translateY(0%);
+    opacity: 1.0; } }
 @keyframes rearBack {
   0% {
     transform: rotate(0deg); }
@@ -235,5 +287,10 @@ b {
     top: 50%;
     transform: translate(-50%, -50%) scale(-1, 1);
     transition: transform 0.3s; }
+
+.more-info p {
+  margin-bottom: 36px; }
+.more-info h2 {
+  margin-bottom: 36px; }
 
 /*# sourceMappingURL=main.css.map */
