--- a/main.css
+++ b/main.css
@@ -25,7 +25,8 @@ body {
   overflow-x: hidden; }
 
 h1 {
-  font-size: 2em;
+  font-family: "HelveticaNeue", Helvetica;
+  font-size: 1.2em;
   font-weight: 300;
   text-align: center;
   margin-top: 20px;
@@ -35,6 +36,11 @@ h1 {
   z-index: 100;
   color: #FCECDD;
   transition: color 0.7s; }
+  h1 b {
+    font-size: 1.5em;
+    letter-spacing: 1px;
+    font-weight: 400;
+    color: #FF6C64; }
 
 h2 {
   font-size: 2em;
@@ -83,9 +89,9 @@ h2 {
   display: none; }
 
 .results .fade-three .icon {
-  width: 72px;
-  height: 72px;
-  margin-left: 52px;
+  width: 98px;
+  height: 98px;
+  margin-left: 48px;
   margin-top: 16px; }
 
 .time-row {
@@ -130,7 +136,8 @@ input[type="number"] {
   font-style: italic;
   margin-right: 10px;
   margin-left: 10px;
-  text-shadow: 1px 1px rgba(65, 61, 55, 0.3); }
+  text-shadow: 1px 1px rgba(65, 61, 55, 0.3);
+  color: #FF6C64; }
 
 .location-inputs {
   position: relative;
@@ -288,9 +295,24 @@ b {
     transform: translate(-50%, -50%) scale(-1, 1);
     transition: transform 0.3s; }
 
-.more-info p {
-  margin-bottom: 36px; }
-.more-info h2 {
-  margin-bottom: 36px; }
+.more-info {
+  position: relative; }
+  .more-info .chevron {
+    position: absolute;
+    top: -48px;
+    left: 50%;
+    width: 16px;
+    height: 16px;
+    transform-origin: 50% 50%;
+    transform: translateX(-100%) rotate(90deg) scale(0.5, 1);
+    cursor: pointer;
+    opacity: 0.7; }
+    .more-info .chevron svg {
+      width: 100%;
+      height: auto; }
+  .more-info p {
+    margin-bottom: 36px; }
+  .more-info h2 {
+    margin-bottom: 36px; }
 
 /*# sourceMappingURL=main.css.map */
