--- a/main.css
+++ b/main.css
@@ -4,6 +4,23 @@
   padding: 0;
   box-sizing: border-box; }
 
+
+div ul {
+  list-style: none;
+  padding-left: 1.2rem;
+}
+a:visited {
+  color: grey;
+}
+a {
+  color: #FF6C64
+}
+.intro {
+  text-align: left;
+}
+#start-location, #end-location {
+  border-bottom: solid 4px #FCECDD;
+}
 #map {
   height: 100%;
   width: 100%;
